adds support for schema validation
