# src/routers/category.router.ts
@@ -1,14 +1,15 @@
 import { Router } from 'express';
 
 import { validate } from './../middlewares/app.middlewares';
-import createCategorySchema from './../schemas/create-category-request.schema.json';
+import postSchema from './../schemas/create-categories-request.schema.json';
+import patchSchema from './../schemas/update-categories-request.schema.json';
 import { post, list, get, patch, remove } from './../controllers/category.controller';
 
 export const router = Router();
-router.route('/category')
-    .post(validate(createCategorySchema), post)
+router.route('/categories')
+    .post(validate(postSchema), post)
     .get(list);
-router.route('/category/:id')
+router.route('/categories/:id')
     .get(get)
-    .patch(patch)
+    .patch(validate(patchSchema), patch)
     .delete(remove);
